Bug 1502766 - Part 1 (beta only): Pass enough args to NrIceCtx::Create. r=mjf a=RyanVM